--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,14 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  shared_preferences: ^2.0.6
+
 
 flutter:
   uses-material-design: true
 
   assets:
+    - assets/images/
     - assets/images/lovepeople_logo.png
 
   fonts:
