--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,15 @@ dependencies:
   cupertino_icons: ^1.0.6
   dotted_line: ^3.2.2
   provider: ^6.1.2
+  dio: ^5.4.3+1
+  talker_dio_logger: ^4.2.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
-  shared_preferences: ^2.0.6
-
 
 flutter:
   uses-material-design: true
